src/objects/POS_Revenue_Center_Category__c.object
<CustomObject>
    <fields>
        <fullName>c_comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_inactive__c</fullName>
        <label>Inactive</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_outlet_prop_cd__c</fullName>
        <label>Outlet property code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_prop_cd__c</fullName>
        <label>Property code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_region_cd__c</fullName>
        <label>Region code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_category__c</fullName>
        <label>Revenue center category</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_cd__c</fullName>
        <label>Revenue center code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_rev_center_desc__c</fullName>
        <label>Revenue center description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>POS Revenue Center Category</label>
    <nameField>
        <displayFormat>PRCC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Revenue Center Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>